Interfaz, tarjetas, manejo de memoria

--- a/build-client-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/Makefile.Debug
+++ b/build-client-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/Makefile.Debug
@@ -19,7 +19,7 @@ CXXFLAGS      = -fno-keep-inline-dllexport -g -Wall -Wextra -Wextra -fexceptions
 INCPATH       = -I../client -I. -IC:/Qt/6.2.4/mingw_64/include -IC:/Qt/6.2.4/mingw_64/include/QtWidgets -IC:/Qt/6.2.4/mingw_64/include/QtGui -IC:/Qt/6.2.4/mingw_64/include/QtCore -Idebug -I. -I/include -IC:/Qt/6.2.4/mingw_64/mkspecs/win32-g++ 
 LINKER      =        g++
 LFLAGS        =        -Wl,-subsystem,windows -mthreads
-LIBS        =        -lWs2_32 -lwsock32 -pthread -std=c++11 C:/Qt/6.2.4/mingw_64/lib/libQt6Widgets.a C:/Qt/6.2.4/mingw_64/lib/libQt6Gui.a C:/Qt/6.2.4/mingw_64/lib/libQt6Core.a -lmingw32 C:/Qt/6.2.4/mingw_64/lib/libQt6EntryPoint.a -lshell32  
+LIBS        =        -lWs2_32 -lwsock32 -pthread -std=c++11 -lpsapi C:/Qt/6.2.4/mingw_64/lib/libQt6Widgets.a C:/Qt/6.2.4/mingw_64/lib/libQt6Gui.a C:/Qt/6.2.4/mingw_64/lib/libQt6Core.a -lmingw32 C:/Qt/6.2.4/mingw_64/lib/libQt6EntryPoint.a -lshell32  
 QMAKE         = C:/Qt/6.2.4/mingw_64/bin/qmake.exe
 DEL_FILE      = rm -f
 CHK_DIR_EXISTS= test -d
@@ -555,7 +555,44 @@ debug/mainwindow.o: ../client/mainwindow.cpp ../client/mainwindow.h \
 		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qtabwidget.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/qicon.h \
 		../client/clientsock.h \
-		ui_mainwindow.h
+		ui_mainwindow.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/QVariant \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QApplication \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qapplication.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcoreapplication.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qeventloop.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcoreapplication_platform.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qfuture.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qfutureinterface.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qmutex.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qresultstore.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qfuture_impl.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qthreadpool.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qthread.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qdeadlinetimer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qelapsedtimer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qrunnable.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qexception.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qpromise.h \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/qguiapplication.h \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/qinputmethod.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qlocale.h \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/qguiapplication_platform.h \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QLabel \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qlabel.h \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qframe.h \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/qpicture.h \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/qtextdocument.h \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QMenuBar \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qmenubar.h \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qmenu.h \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/qaction.h \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QPushButton \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qpushbutton.h \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qabstractbutton.h \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QStatusBar \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qstatusbar.h \
+		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QWidget
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug/mainwindow.o ../client/mainwindow.cpp
 
 debug/clientsock.o: ../client/clientsock.cpp ../client/clientsock.h
