Arreglo del generador de matriz aleatoria

--- a/build-server-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/Makefile.Debug
+++ b/build-server-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/Makefile.Debug
@@ -263,10 +263,12 @@ debug/moc_mainwindow.cpp: ../server/mainwindow.h \
 		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qtabwidget.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/qicon.h \
 		../server/server.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/QDebug \
 		../server/memory.h \
 		../server/linkedcard.h \
 		../server/card.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/QImage \
+		../server/game.h \
 		debug/moc_predefs.h \
 		C:/Qt/6.2.4/mingw_64/bin/moc.exe
 	'C:\Qt\6.2.4\mingw_64\bin\moc.exe' $(DEFINES) --include C:/Users/esteb/Documents/GitHub/I-Proyecto-Datos-II/build-server-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/debug/moc_predefs.h -IC:/Qt/6.2.4/mingw_64/mkspecs/win32-g++ -IC:/Users/esteb/Documents/GitHub/I-Proyecto-Datos-II/server -IC:/Qt/6.2.4/mingw_64/include -IC:/Qt/6.2.4/mingw_64/include/QtWidgets -IC:/Qt/6.2.4/mingw_64/include/QtGui -IC:/Qt/6.2.4/mingw_64/include/QtCore -I. -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include/c++ -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include/c++/x86_64-w64-mingw32 -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include/c++/backward -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include-fixed -IC:/Qt/Tools/mingw1120_64/x86_64-w64-mingw32/include ../server/mainwindow.h -o debug/moc_mainwindow.cpp
@@ -439,10 +441,12 @@ debug/main.o: ../server/main.cpp ../server/mainwindow.h \
 		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qtabwidget.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/qicon.h \
 		../server/server.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/QDebug \
 		../server/memory.h \
 		../server/linkedcard.h \
 		../server/card.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/QImage \
+		../server/game.h \
 		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QApplication \
 		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qapplication.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qcoreapplication.h \
@@ -597,88 +601,22 @@ debug/mainwindow.o: ../server/mainwindow.cpp ../server/mainwindow.h \
 		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qtabwidget.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/qicon.h \
 		../server/server.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/QDebug \
 		../server/memory.h \
 		../server/linkedcard.h \
 		../server/card.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/QImage \
-		ui_mainwindow.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/QVariant \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QApplication \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qapplication.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qcoreapplication.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qeventloop.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qcoreapplication_platform.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qfuture.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qfutureinterface.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qmutex.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qresultstore.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qfuture_impl.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qthreadpool.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qthread.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qdeadlinetimer.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qelapsedtimer.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qrunnable.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qexception.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qpromise.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qguiapplication.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qinputmethod.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qlocale.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qguiapplication_platform.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QHeaderView \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qheaderview.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qabstractitemview.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qabstractscrollarea.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qframe.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qabstractitemmodel.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qitemselectionmodel.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qabstractitemdelegate.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qstyleoption.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qabstractspinbox.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qvalidator.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qregularexpression.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qslider.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qabstractslider.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qstyle.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qtabbar.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qrubberband.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QLabel \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qlabel.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qpicture.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qtextdocument.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QMenuBar \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qmenubar.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qmenu.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qaction.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QPlainTextEdit \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qplaintextedit.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qtextedit.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qtextoption.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qtextcursor.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qtextformat.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qpen.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qabstracttextdocumentlayout.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qtextlayout.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qglyphrun.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qrawfont.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qfontdatabase.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QPushButton \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qpushbutton.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qabstractbutton.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QStatusBar \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qstatusbar.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QTableWidget \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qtablewidget.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/qtableview.h \
-		C:/Qt/6.2.4/mingw_64/include/QtWidgets/QWidget
+		../server/game.h \
+		ui_mainwindow.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug/mainwindow.o ../server/mainwindow.cpp
 
 debug/memory.o: ../server/memory.cpp ../server/memory.h \
 		../server/linkedcard.h \
 		../server/card.h \
 		../server/server.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/QImage \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qimage.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qtguiglobal.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/QDebug \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qdebug.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qalgorithms.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qglobal.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qconfig-bootstrapped.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qconfig.h \
@@ -699,17 +637,7 @@ debug/memory.o: ../server/memory.cpp ../server/memory.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qglobalstatic.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qnumeric.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qversiontagging.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qtgui-config.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qcolor.h \
-		C:/Qt/6.2.4/mingw_64/include/QtGui/qrgb.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qnamespace.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qtmetamacros.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringlist.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qlist.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qarraydatapointer.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qarraydataops.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qarraydata.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qpair.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qhash.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qcontainertools_impl.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qhashfunctions.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qstring.h \
@@ -717,6 +645,12 @@ debug/memory.o: ../server/memory.cpp ../server/memory.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringview.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qbytearray.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qrefcount.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qnamespace.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qtmetamacros.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qarraydata.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qpair.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qarraydatapointer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qarraydataops.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qbytearrayalgorithms.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qbytearrayview.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringliteral.h \
@@ -726,14 +660,46 @@ debug/memory.o: ../server/memory.cpp ../server/memory.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringtokenizer.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringbuilder.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qiterator.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qlist.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qbytearraylist.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qalgorithms.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringlist.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringmatcher.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qmath.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qmap.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qshareddata.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qshareddata_impl.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qtextstream.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qiodevicebase.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qscopedpointer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringconverter.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qset.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcontiguouscache.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qsharedpointer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qsharedpointer_impl.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qobject.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qobjectdefs.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qobjectdefs_impl.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcoreevent.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qmetatype.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcompare.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qvarlengtharray.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qscopeguard.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qdatastream.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qiterable.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qmetacontainer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcontainerinfo.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qtaggedpointer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qobject_impl.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qbindingstorage.h \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/QImage \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/qimage.h \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/qtguiglobal.h \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/qtgui-config.h \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/qcolor.h \
+		C:/Qt/6.2.4/mingw_64/include/QtGui/qrgb.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/qrgba64.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/qpaintdevice.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/qwindowdefs.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qobjectdefs.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qobjectdefs_impl.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/qwindowdefs_win.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qrect.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qmargins.h \
@@ -743,14 +709,89 @@ debug/memory.o: ../server/memory.cpp ../server/memory.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/qtransform.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/qpolygon.h \
 		C:/Qt/6.2.4/mingw_64/include/QtGui/qregion.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qdatastream.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qscopedpointer.h \
-		C:/Qt/6.2.4/mingw_64/include/QtCore/qiodevicebase.h \
 		C:/Qt/6.2.4/mingw_64/include/QtCore/qline.h \
+		../server/game.h \
 		../server/linkedlist.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug/memory.o ../server/memory.cpp
 
-debug/server.o: ../server/server.cpp ../server/server.h
+debug/server.o: ../server/server.cpp ../server/server.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/QDebug \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qdebug.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qalgorithms.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qglobal.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qconfig-bootstrapped.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qconfig.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qtcore-config.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qsystemdetection.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qprocessordetection.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcompilerdetection.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qtypeinfo.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcontainerfwd.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qsysinfo.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qlogging.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qflags.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qatomic.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qbasicatomic.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qatomic_bootstrap.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qgenericatomic.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qatomic_cxx11.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qglobalstatic.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qnumeric.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qversiontagging.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qhash.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcontainertools_impl.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qhashfunctions.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qstring.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qchar.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringview.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qbytearray.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qrefcount.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qnamespace.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qtmetamacros.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qarraydata.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qpair.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qarraydatapointer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qarraydataops.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qbytearrayalgorithms.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qbytearrayview.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringliteral.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringalgorithms.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qanystringview.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qutf8stringview.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringtokenizer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringbuilder.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qiterator.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qlist.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qbytearraylist.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringlist.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringmatcher.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qmath.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qmap.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qshareddata.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qshareddata_impl.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qtextstream.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qiodevicebase.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qscopedpointer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qstringconverter.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qset.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcontiguouscache.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qsharedpointer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qsharedpointer_impl.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qobject.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qobjectdefs.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qobjectdefs_impl.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcoreevent.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qmetatype.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcompare.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qvarlengtharray.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qscopeguard.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qdatastream.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qiterable.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qmetacontainer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qcontainerinfo.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qtaggedpointer.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qobject_impl.h \
+		C:/Qt/6.2.4/mingw_64/include/QtCore/qbindingstorage.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug/server.o ../server/server.cpp
 
 debug/moc_mainwindow.o: debug/moc_mainwindow.cpp 
